# ModelDistiller

./: .gitignore  CONTEXT.md  PRD.md  README.md  RESULTS.md  infer.py  pyproject.toml
cost_analysis/: compute_cost_comparison.py
data/: eval_locked.jsonl  eval_locked.jsonl.sha256  train.jsonl  train_formatted.jsonl  val.jsonl  val_formatted.jsonl
data/raw/: README.md  generation_run_20260621T144845.json  generation_run_20260621T195959.json
data_curation/: __init__.py  deduplicate.py  quality_filter.py  split_dataset.py  validate_schema.py
data_generation/: __init__.py  generate_synthetic_data.py  prompts.py
evaluation/: __init__.py  run_eval.py  scoring.py
schema/: __init__.py  extraction_schema.py
serving/: api.py  cli.py  export_gguf.py
tests/: test_schema_validation.py  test_scoring.py
training/: Eval_Qwen2_5_3B.ipynb  Unsloth_Finetune_Qwen2_5_3B.ipynb  config.py  create_notebook.py  format_dataset.py  run_log.md
